apps/api/base/api-register/api-register-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-register-dpl
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 33%
  template:
    spec:
      containers:
        - name: don-api-register
          image: don-api-register
          ports:
            - name: http
              containerPort: 1337
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              cpu: "4"
              memory: "4Gi"
#          livenessProbe:
#            httpGet:
#              path: /
#              port: 1337
#            initialDelaySeconds: 3
#            periodSeconds: 30
#          readinessProbe:
#            httpGet:
#              path: /
#              port: 1337
#            initialDelaySeconds: 3
#            periodSeconds: 5
