apps/api/base/api-register/api-register-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-register-svc
spec:
  ports:
    - port: 1337
      targetPort: http
