apps/api/base/api-register/api-register-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-register-ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: set-in-overlay
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc
                port:
                  number: 80
  tls:
    - hosts:
        - set-in-overlay
      secretName: static-tls
